# DiscordPiBot

./: .flake8  .gitignore  Dockerfile  README.md  discordpibot.py  docker-compose.yaml  entry.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  settings.yaml  settings_example.yaml
.github/workflows/: lint.yml  test.yml
discordpibot/: cronScheduler.py  discordpibot.py  entry.py  logging.py  settingsModule.py
docs/: code.md
tests/: test_cronScheduler.py  test_entry.py  test_placeholder.py
