[tool.poetry]
name = "discordpibot"
version = "0.1.0"
description = ""
authors = ["DavidGL17 <david.gonzalez@citycable.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
feedparser = "^6.0.8"
pyyaml = "^6.0"
croniter = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^22.10.0"

[tool.poetry.scripts]
discordpibot = "discordpibot.discordpibot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
